# tf-data-compose

./: .gitignore  .pdm-python  Makefile  Pipfile  README.md  TODO.md  pyproject.toml  pyrightconfig.json  readthedocs.yaml
.github/workflow/: test.yaml
.github/workflows/: codeql.yaml  publish-test.yaml  publish.yaml  test.yaml
docs/: apireference.rst  conf.py  demo.ipynb  index.rst
docs/_static/: style.css
src/tfdatacompose/: batch.py  datasetoperation.py  flatmap.py  pipepline.py  skip.py  take.py
src/tfdatacompose/filter/: filter.py  numpyfilter.py  pythonfunctionfilter.py
src/tfdatacompose/flatmap/: flatmap.py  numpyflatmap.py  pythonfunctionflatmap.py
src/tfdatacompose/lambdamap/: lambdamap.py  numpylambdamap.py  numylambdamap.py  pythonfunctionlambdamap.py
src/tfdatacompose/map/: map.py  numpymap.py  pythonfunctionmap.py
src/tfdatacompose/util/: print.py  printshape.py
tests/: test_batch.py  test_flatmap.py  test_pipeline.py
tests/filter/: test_pythonfunctionfilter.py
tests/lambdamap/: test_lambdamap.py  test_numpylambdamap.py
tests/map/: test_map.py  test_numpymap.py  test_pythonfunctionmap.py
